# fcnn

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  classification.cpp
examples/models/: resnet-18.param  resnet-18.prototxt
scripts/: build.sh  calc_average.py
src/: CMakeLists.txt  blob.cpp  blob.h  create_layer.cpp  layer.cpp  layer.h  net.cpp  net.h
src/layers/: convolution.cpp  convolution.h  element_wise.cpp  element_wise.h  global_avepool.cpp  global_avepool.h  inner_product.cpp  inner_product.h  input.cpp  input.h  maxpool.cpp  maxpool.h  padding.h  relu.cpp  relu.h  scale.cpp  scale.h  softmax.cpp  softmax.h
test/: CMakeLists.txt  test_common.h  test_convolution.cpp  test_main.cpp  test_maxpool.cpp
tools/: CMakeLists.txt  caffe2fcnn.cpp
