cmake_minimum_required(VERSION 2.8)
set(PROJECT_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

option(DEBUG "Debug mode." OFF)
option(BUILD_TOOLS "Build tools" ON)
option(BUILD_EXAMPLES "Build examples" ON)
option(BUILD_TEST "Build test" ON)

include_directories(${PROJECT_ROOT_PATH})
include_directories(${PROJECT_ROOT_PATH}/src)
add_subdirectory(src)
if(BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()
if(BUILD_TOOLS)
    add_subdirectory(tools)
endif()
if(BUILD_TEST)
    add_subdirectory(test)
endif()
if(DEBUG)
    target_compile_options(lib_src PRIVATE -g)
    target_compile_options(lib_src PRIVATE -O0)
else()
    target_compile_options(lib_src PRIVATE -O3)
endif()